rename files case

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseHead from "../components/baseHead.astro";
+import BaseHead from "../components/BaseHead.astro";
 import { getAllPosts, getSiteSettings } from "../lib/sanity";
 import { urlForImage } from "../lib/sanityImageUrlBuilder";
 const settings = await getSiteSettings();
