--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,28 +1,25 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import { getAllPosts, getSiteSettings } from "../lib/sanity";
 import { urlForImage } from "../lib/sanityImageUrlBuilder";
 const settings = await getSiteSettings();
 const allPosts = await getAllPosts();
 ---
 
-<html lang="en">
-  <BaseHead />
-  <body>
-    <h1>{settings.title}</h1>
-    <p>{settings.description}</p>
-    <ul>
-      {
-        allPosts.map((post) => (
-          <li>
-            <h2>{post.title}</h2>
-            <img
-              src={urlForImage(post.images[0]).width(300).url()}
-              alt={post.images[0].altText}
-            />
-          </li>
-        ))
-      }
-    </ul>
-  </body>
-</html>
+<MainLayout>
+  <h1>{settings.title}</h1>
+  <p>{settings.description}</p>
+  <ul>
+    {
+      allPosts.map((post) => (
+        <li>
+          <h2>{post.title}</h2>
+          <img
+            src={urlForImage(post.images[0]).width(300).url()}
+            alt={post.images[0].altText}
+          />
+        </li>
+      ))
+    }
+  </ul>
+</MainLayout>
