add basic nav bar

--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -1,10 +1,12 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import NavBar from "../components/NavBar.astro";
 ---
 
 <html lang="en">
   <BaseHead />
   <body>
+    <NavBar />
     <slot />
   </body>
 </html>
