--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -3,5 +3,5 @@ import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout>
-  <h1>About</h1>
+  <h1 class="text-riso-blue">About</h1>
 </MainLayout>
