--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -15,6 +15,7 @@ const allPosts = await getAllPosts();
         <li>
           <h2>{post.title}</h2>
           <img
+            class="border-l-8 border-riso-blue"
             loading="lazy"
             src={urlForImage(post.images[0]).width(300).url()}
             alt={post.images[0].altText}
