--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -2,7 +2,7 @@
 import NavBarLink from "./NavBarLink.astro";
 ---
 
-<ul>
+<ul class="flex gap-4 text-riso-black">
   <li><NavBarLink href="/" text="home" /></li>
   <li><NavBarLink href="/about" text="about" /></li>
 </ul>
