--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -3,9 +3,9 @@ import BaseHead from "../components/BaseHead.astro";
 import NavBar from "../components/NavBar.astro";
 ---
 
-<html lang="en">
+<html class="font-display" lang="en">
   <BaseHead />
-  <body>
+  <body class="container mx-auto max-w-lg">
     <NavBar />
     <slot />
   </body>
