--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -4,6 +4,17 @@ import { getAllPosts, getSiteSettings } from "../lib/sanity";
 import { urlForImage } from "../lib/sanityImageUrlBuilder";
 const settings = await getSiteSettings();
 const allPosts = await getAllPosts();
+
+//change sanity post schema drop the riso-
+function getPostColors(color) {
+  const risoColors = {
+    red: "border-riso-red",
+    green: "border-riso-green",
+    blue: "border-riso-blue",
+    purple: "border-riso-purple",
+  };
+  return risoColors[color];
+}
 ---
 
 <MainLayout>
@@ -20,7 +31,7 @@ const allPosts = await getAllPosts();
         <li>
           <h2>{post.title}</h2>
           <img
-            class="border-l-16 border-riso-blue"
+            class:list={["border-l-16", getPostColors(post.color)]}
             loading="lazy"
             src={urlForImage(post.images[0]).width(300).url()}
             alt={post.images[0].altText}
