--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -5,16 +5,12 @@ import { urlForImage } from "../lib/sanityImageUrlBuilder";
 const settings = await getSiteSettings();
 const allPosts = await getAllPosts();
 
-//change sanity post schema drop the riso-
-function getPostColors(color) {
-  const risoColors = {
-    red: "border-riso-red",
-    green: "border-riso-green",
-    blue: "border-riso-blue",
-    purple: "border-riso-purple",
-  };
-  return risoColors[color];
-}
+const risoColors = {
+  red: "border-riso-red",
+  green: "border-riso-green",
+  blue: "border-riso-blue",
+  purple: "border-riso-purple",
+};
 ---
 
 <MainLayout>
@@ -31,9 +27,9 @@ function getPostColors(color) {
         <li>
           <h2>{post.title}</h2>
           <img
-            class:list={["border-l-16", getPostColors(post.color)]}
+            class:list={["border-l-16", "bg-riso-red", risoColors[post.color]]}
             loading="lazy"
-            src={urlForImage(post.images[0]).width(300).url()}
+            src={urlForImage(post.images[0]).width(300).auto("format").url()}
             alt={post.images[0].altText}
           />
         </li>
