start building blog components

--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -2,7 +2,10 @@
 import NavBarLink from "./NavBarLink.astro";
 ---
 
-<ul class="flex gap-4 text-riso-black">
-  <li><NavBarLink href="/" text="home" /></li>
-  <li><NavBarLink href="/about" text="about" /></li>
+<ul
+  class="mt-4 py-2 flex gap-4 text-riso-blue-dark justify-center bg-white sticky top-0"
+>
+  <li><NavBarLink href="/" text="Blog" /></li>
+  <li><NavBarLink href="/gallery" text="Gallery" /></li>
+  <li><NavBarLink href="/about" text="About" /></li>
 </ul>
