--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -5,7 +5,7 @@ import NavBar from "../components/NavBar.astro";
 
 <html class="font-display" lang="en">
   <BaseHead />
-  <body class="container mx-auto max-w-lg">
+  <body class="container mx-auto max-w-2xl">
     <NavBar />
     <slot />
   </body>
