--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,16 +1,9 @@
 ---
+import BlogFeed from "../components/blog/BlogFeed.astro";
+import BlogPostCard from "../components/blog/BlogPostCard.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import { getAllPosts, getSiteSettings } from "../lib/sanity";
-import { urlForImage } from "../lib/sanityImageUrlBuilder";
+import { getSiteSettings } from "../lib/sanity";
 const settings = await getSiteSettings();
-const allPosts = await getAllPosts();
-
-const risoColors = {
-  red: "border-riso-red",
-  green: "border-riso-green",
-  blue: "border-riso-blue",
-  purple: "border-riso-purple",
-};
 ---
 
 <MainLayout>
@@ -19,21 +12,11 @@ const risoColors = {
   >
     {settings.title}
   </h1>
-  <div class="mt-6 border-b-2 border-riso-yellow"></div>
-  <p>{settings.description}</p>
-  <ul>
-    {
-      allPosts.map((post) => (
-        <li>
-          <h2>{post.title}</h2>
-          <img
-            class:list={["border-l-16", "bg-riso-red", risoColors[post.color]]}
-            loading="lazy"
-            src={urlForImage(post.images[0]).width(300).auto("format").url()}
-            alt={post.images[0].altText}
-          />
-        </li>
-      ))
-    }
-  </ul>
+  <div class="mt-6 border-b-2 border-riso-yellow sticky top-10"></div>
+  <BlogFeed />
 </MainLayout>
+
+<script>
+  import "../lib/photoSwipe";
+  import "photoswipe/style.css";
+</script>
