--- a/frontend/src/pages/posts/[slug].astro
+++ b/frontend/src/pages/posts/[slug].astro
@@ -20,5 +20,6 @@ const { title, images } = Astro.props;
 
 <MainLayout>
   <h1>{title}</h1>
+  <p>test</p>
   <img src={urlForImage(images[0]).url()} alt="" />
 </MainLayout>
