--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -1,12 +1,16 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
 import NavBar from "../components/NavBar.astro";
 ---
 
 <html class="font-display" lang="en">
   <BaseHead />
   <body class="container mx-auto max-w-2xl">
-    <NavBar />
+    <Header />
     <slot />
-  </body>
+  </body><script>
+    import "../lib/photoSwipe";
+    import "photoswipe/style.css";
+  </script>
 </html>
