--- a/frontend/src/components/blog/BlogPostCard.astro
+++ b/frontend/src/components/blog/BlogPostCard.astro
@@ -1,30 +1,32 @@
 ---
 import { urlForImage } from "../../lib/sanityImageUrlBuilder";
 import risoColorClasses from "../../utility/risoColorClasses.js";
-import BlogPostImage from "./BlogPostImage.astro";
+import Image from "astro/components/Image.astro";
 
-const imageWidth = 600;
+const width = 640;
+const height = 300;
 const { post } = Astro.props;
 const imageUrl = urlForImage(post.images[0])
-  .width(imageWidth)
-  .height(300)
+  .width(width)
+  .height(height)
   .auto("format")
   .url();
 const date = post.publishDate.slice(0, 10);
 const color = risoColorClasses[post.color];
 ---
 
-<div class="flex flex-col">
+<article class="container sm flex flex-col">
   <span class:list={["text-xs", color.text]}>{date}</span>
-  <BlogPostImage
-    color={color.border}
-    imageUrl={imageUrl}
-    width={imageWidth}
-    height={300}
+  <Image
+    class:list={["border-l-16", color.border]}
+    src={imageUrl}
+    width={width}
+    height={height}
+    alt={post.images[0].altText}
     loading="lazy"
   />
   <h2 class:list={["text-xl md:text-2xl font-semibold uppercase", color.title]}>
     <a href={`posts/${post.slug.current}`}>{post.title}</a>
   </h2>
   <p class:list={["md:text-lg", color.text]}>{post.description}</p>
-</div>
+</article>
