--- a/frontend/src/pages/posts/[slug].astro
+++ b/frontend/src/pages/posts/[slug].astro
@@ -19,13 +19,13 @@ export async function getStaticPaths() {
 const { slug } = Astro.params;
 const { post } = Astro.props;
 const color = risoColorClasses[post.color];
-const mainImage = urlForImage(post.images[0]).width(640).url();
+const mainImage = urlForImage(post.image).width(640).fit("max").url();
 const features = post.features;
 console.log(features);
 ---
 
 <MainLayout>
-  <article class="container sm mt-6">
+  <article class="container sm mt-6 gallery">
     <span class="text-xs">{post.publishDate.slice(0, 10)}</span>
     <header class="grid grid-cols-2 gap-5">
       <hgroup>
@@ -36,13 +36,14 @@ console.log(features);
         </p>
       </hgroup>
       <a
+        class="ps-image"
         href={mainImage}
-        data-pswp-width="1669"
-        data-pswp-height="2500"
+        data-pswp-src={mainImage}
+        data-pswp-width={640}
         target="_blank"
       >
         <img
-          class="float-right border-l-16 border-riso-red"
+          class="float-right border-l-10 md:border-l-16 border-riso-red"
           src={mainImage}
           alt=""
         />
