--- a/frontend/src/pages/posts/[slug].astro
+++ b/frontend/src/pages/posts/[slug].astro
@@ -28,11 +28,13 @@ const date = post.date.slice(0, 10);
 ---
 
 <MainLayout>
-  <article class="container sm mt-6 gallery">
+  <article class="container sm mt-6 mx-auto px-16 gallery">
     <span class="text-xs">{}</span>
-    <header class="grid grid-cols-2 gap-5">
-      <hgroup>
-        <h1 class="text-3xl font-semibold uppercase grow">{post.title}</h1>
+    <header class="grid grid-cols-1 md:grid-cols-2 gap-5">
+      <hgroup class="order-2">
+        <h1 class="text-2xl md:text-3xl font-semibold uppercase">
+          {post.title}
+        </h1>
         {features ? <FeatureBlock features={post.features} /> : undefined}
         <p class="mt-auto">
           {post.description}
