--- a/frontend/src/components/blog/BlogFeed.astro
+++ b/frontend/src/components/blog/BlogFeed.astro
@@ -5,10 +5,10 @@ import BlogPostCard from "./BlogPostCard.astro";
 const allPosts = await getAllPosts();
 ---
 
-<ul class="container mt-10 flex flex-col gap-8">
+<ul class="container mt-10 px-10 flex flex-col gap-8 items-center">
   {
     allPosts.map((post) => (
-      <li class="container mx-auto px-10">
+      <li class="w-fit">
         <BlogPostCard post={post} />
       </li>
     ))
