test nav bar link urls

--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -4,4 +4,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 <MainLayout>
   <h1 class="text-riso-blue">About</h1>
+  <h1>The current URL is: {Astro.url}</h1>
+  <h1>The current URL pathname is: {Astro.url.pathname}</h1>
+  <h1>The current URL origin is: {Astro.url.origin}</h1>
 </MainLayout>
