--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -6,6 +6,6 @@ import NavBarLink from "./NavBarLink.astro";
   class="mt-4 py-2 flex gap-4 text-riso-blue-dark justify-center bg-white sticky top-0"
 >
   <li><NavBarLink href="/" text="Blog" /></li>
-  <li><NavBarLink href="/gallery" text="Gallery" /></li>
-  <li><NavBarLink href="/about" text="About" /></li>
+  <li><NavBarLink href="/gallery/" text="Gallery" /></li>
+  <li><NavBarLink href="/about/" text="About" /></li>
 </ul>
