--- a/frontend/src/components/GalleryImage.astro
+++ b/frontend/src/components/GalleryImage.astro
@@ -8,7 +8,7 @@ const width = 800;
 const height = width / illustration.size.aspectRatio;
 const imgUrl = urlForImage(img).width(width).fit("max").auto("format").url();
 const thumbnailUrl = urlForImage(img)
-  .width(width / 2)
+  .width(400)
   .fit("max")
   .auto("format")
   .url();
