--- a/frontend/src/pages/gallery.astro
+++ b/frontend/src/pages/gallery.astro
@@ -8,7 +8,7 @@ const illustrations = await getAllIllustrations();
 
 <MainLayout>
   <ul
-    class="mt-6 container md mx-auto columns-1 md:columns-2 lg:columns-3 gallery"
+    class="mt-6 mx-16 columns-1 md:columns-2 lg:columns-3 xl:columns-4 gallery"
   >
     {
       illustrations.map((i) => (
