--- a/frontend/src/components/blog/BlogPostCard.astro
+++ b/frontend/src/components/blog/BlogPostCard.astro
@@ -14,7 +14,7 @@ const imageUrl = urlForImage(post.illustration.image)
   .url();
 const date = post.date.slice(0, 10);
 const color = risoColorClasses[post.color];
-const postUrl = `posts/${post.slug.current}`;
+const postUrl = `/posts/${post.slug.current}`;
 ---
 
 <article class="flex flex-col">
