--- a/frontend/src/pages/gallery.astro
+++ b/frontend/src/pages/gallery.astro
@@ -1,9 +1,7 @@
 ---
 import GalleryImage from "../components/GalleryImage.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import { getAllIllustrations } from "../lib/sanity";
-
-const illustrations = await getAllIllustrations();
+import { allIllustrations } from "../lib/sanity";
 ---
 
 <MainLayout>
@@ -11,7 +9,7 @@ const illustrations = await getAllIllustrations();
     class="mt-6 mx-16 columns-1 md:columns-2 lg:columns-3 xl:columns-4 gallery"
   >
     {
-      illustrations.map((i) => (
+      allIllustrations.map((i) => (
         <li class="mb-5">
           <GalleryImage illustration={i} />
         </li>
