--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import BlogFeed from "../components/blog/BlogFeed.astro";
-
+import { allPosts } from "../lib/sanity";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout>
-  <BlogFeed />
+  <BlogFeed posts={allPosts} />
 </MainLayout>
