--- a/frontend/src/pages/tags/index.astro
+++ b/frontend/src/pages/tags/index.astro
@@ -8,7 +8,7 @@ import { allCatagories } from "../../lib/sanity";
     {
       allCatagories.map((catagory) => (
         <li>
-          <a href={`/catagories/${catagory.slug.current}/`}>{catagory.title}</a>
+          <a href={`/catagories/${catagory.slug.current}`}>{catagory.title}</a>
         </li>
       ))
     }
