--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -5,7 +5,8 @@ import NavBarLink from "./NavBarLink.astro";
 <ul
   class="mt-4 py-2 flex gap-4 text-riso-blue-dark justify-center bg-white sticky top-0"
 >
-  <li><NavBarLink href="/" text="Blog" /></li>
+  <li><NavBarLink href="/" text="Home" /></li>
+  <li><NavBarLink href="/blog/" text="Blog" /></li>
   <li><NavBarLink href="/gallery/" text="Gallery" /></li>
   <li><NavBarLink href="/about/" text="About" /></li>
 </ul>
