add pagination to tag pages

--- a/frontend/src/components/blog/BlogPostTags.astro
+++ b/frontend/src/components/blog/BlogPostTags.astro
@@ -7,10 +7,13 @@ const { tags } = Astro.props;
 <ul class="mt-2 flex gap-2">
   {
     tags.map((tag) => (
-      <li
-        class:list={["text-white w-fit px-3", risoColorClasses[tag.color].bg]}
-      >
-        <a href={`/tags/${tag.slug.current}`}>{tag.title}</a>
+      <li>
+        <a
+          class:list={["text-white w-fit px-3", risoColorClasses[tag.color].bg]}
+          href={`/blog/${tag.slug.current}`}
+        >
+          {tag.title}
+        </a>
       </li>
     ))
   }
