--- a/frontend/src/pages/blog/[...page].astro
+++ b/frontend/src/pages/blog/[...page].astro
@@ -1,6 +1,7 @@
 ---
 import BlogFeed from "../../components/blog/BlogFeed.astro";
 import BlogPagination from "../../components/blog/BlogPagination.astro";
+import PaginationNav from "../../components/PaginationNav.astro";
 import MainLayout from "../../layouts/MainLayout.astro";
 import { getAllPosts } from "../../lib/sanity";
 
@@ -22,5 +23,5 @@ const { page } = Astro.props;
 <MainLayout>
   <h2>blog</h2>
   <BlogFeed posts={page.data} />
-  <BlogPagination prevUrl={page.url.prev} nextUrl={page.url.next} />
+  <PaginationNav {page} />
 </MainLayout>
