--- a/frontend/src/pages/blog/[tag]/[...page].astro
+++ b/frontend/src/pages/blog/[tag]/[...page].astro
@@ -1,6 +1,7 @@
 ---
 import BlogFeed from "../../../components/blog/BlogFeed.astro";
 import BlogPagination from "../../../components/blog/BlogPagination.astro";
+import PaginationNav from "../../../components/PaginationNav.astro";
 import MainLayout from "../../../layouts/MainLayout.astro";
 import { getAllPosts, getAllTags } from "../../../lib/sanity";
 
@@ -27,5 +28,5 @@ const params = Astro.params;
 <MainLayout>
   <h2>{params.tag}</h2>
   <BlogFeed posts={page.data} />
-  <BlogPagination prevUrl={page.url.prev} nextUrl={page.url.next} />
+  <PaginationNav {page} />
 </MainLayout>
