--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -2,11 +2,11 @@
 import NavBarLink from "./NavBarLink.astro";
 ---
 
-<ul
-  class="mt-4 py-2 flex gap-4 text-riso-blue-dark justify-center bg-white sticky top-0"
->
-  <li><NavBarLink href="/" text="Home" /></li>
-  <li><NavBarLink href="/blog/" text="Blog" /></li>
-  <li><NavBarLink href="/gallery/" text="Gallery" /></li>
-  <li><NavBarLink href="/about/" text="About" /></li>
-</ul>
+<nav class="container mx-auto px-6 py-4 text-riso-blue">
+  <ul class="md:flex justify-center gap-6 hidden">
+    <li><NavBarLink href="/">Home</NavBarLink></li>
+    <li><NavBarLink href="/blog/">Blog</NavBarLink></li>
+    <li><NavBarLink href="/gallery/">Gallery</NavBarLink></li>
+    <li><NavBarLink href="/about/">About</NavBarLink></li>
+  </ul>
+</nav>
