--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const year = new Date().getFullYear();
 ---
 
-<footer>
+<footer class="mt-auto">
   <p class="copywrite">
     <span>Copyright &copy; {year} Arlin Ortiz.&nbsp;</span>
     <span>All Rights Reserved.&nbsp;</span>
