--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -7,12 +7,14 @@ const hidden = Astro.url.pathname !== "/";
 ---
 
 <NavBar />
-<h1
-  class:list={[
-    "mt-4 text-3xl md:text-6xl text-riso-red font-bold uppercase text-center",
-    { hidden },
-  ]}
->
-  {settings.title}
-</h1>
-<div class="mt-6 border-b-2 border-riso-yellow sticky top-10"></div>
+<header class="container mx-auto">
+  <!-- <h1
+    class:list={["text-riso-red font-bold uppercase text-center", { hidden }]}
+  >
+    {settings.title}
+  </h1> -->
+  <h1 class="md:text-center text-riso-red uppercase md:font-bold md:text-3xl">
+    {settings.title}
+  </h1>
+  <div class="mt-6 border-b-2 border-riso-yellow"></div>
+</header>
