--- a/frontend/src/pages/gallery/[...page].astro
+++ b/frontend/src/pages/gallery/[...page].astro
@@ -1,4 +1,5 @@
 ---
+import Gallery from "../../components/Gallery.astro";
 import GalleryImage from "../../components/GalleryImage.astro";
 import PaginationNav from "../../components/PaginationNav.astro";
 import MainLayout from "../../layouts/MainLayout.astro";
@@ -19,16 +20,6 @@ const { page } = Astro.props;
 ---
 
 <MainLayout>
-  <ul
-    class="mt-6 mx-16 columns-1 md:columns-2 lg:columns-3 xl:columns-4 gallery"
-  >
-    {
-      page.data.map((i) => (
-        <li class="mb-5">
-          <GalleryImage illustration={i} />
-        </li>
-      ))
-    }
-  </ul>
+  <Gallery illustrations={page.data} />
   <PaginationNav {page} />
 </MainLayout>
