--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -1,7 +1,6 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+const title = "About";
 ---
 
-<MainLayout>
-  <h1 class="text-riso-blue">About</h1>
-</MainLayout>
+<MainLayout title={title} />
