--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+const title = "Through The Dungeon Home";
 ---
 
-<MainLayout>
-  <h2>home</h2>
-</MainLayout>
+<MainLayout title={title} />
