--- a/frontend/src/layouts/ContentLayout.astro
+++ b/frontend/src/layouts/ContentLayout.astro
@@ -1,3 +1,5 @@
-<section class="container mx-auto px-4 md:px-8">
+<section
+  class="container mx-auto mt-10 px-4 md:px-8 max-w-md md:max-w-xl lg:max-w-3xl"
+>
   <slot />
 </section>
