--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -2,11 +2,17 @@
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
+
 import ContentLayout from "./ContentLayout.astro";
+
+export interface Props {
+  title: string;
+}
+const { title } = Astro.props;
 ---
 
 <html class="" lang="en">
-  <BaseHead />
+  <BaseHead title={title} />
   <body class="font-display container mx-auto px-4 md:px-10">
     <Header />
     <ContentLayout>
