--- a/frontend/src/pages/blog/[...page].astro
+++ b/frontend/src/pages/blog/[...page].astro
@@ -1,6 +1,5 @@
 ---
 import BlogFeed from "../../components/blog/BlogFeed.astro";
-import BlogPagination from "../../components/blog/BlogPagination.astro";
 import PaginationNav from "../../components/PaginationNav.astro";
 import MainLayout from "../../layouts/MainLayout.astro";
 import { getAllPosts } from "../../lib/sanity";
@@ -14,14 +13,14 @@ export async function getStaticPaths({ paginate }) {
       props: { post },
     };
   });
-  return paginate(posts, { pageSize: 3 });
+  return paginate(posts, { pageSize: 5 });
 }
 
 const { page } = Astro.props;
+const title = "Blog";
 ---
 
-<MainLayout>
-  <h2>blog</h2>
+<MainLayout title={title}>
   <BlogFeed posts={page.data} />
   <PaginationNav {page} />
 </MainLayout>
