--- a/frontend/src/pages/blog/posts/[slug].astro
+++ b/frontend/src/pages/blog/posts/[slug].astro
@@ -1,4 +1,5 @@
 ---
+import BlogPostImage from "../../../components/blog/BlogPostImage.astro";
 import FeatureBlock from "../../../components/blog/FeatureBlock.astro";
 import MainLayout from "../../../layouts/MainLayout.astro";
 import { getAllPosts } from "../../../lib/sanity";
@@ -18,42 +19,25 @@ export async function getStaticPaths() {
 const { slug } = Astro.params;
 const { post } = Astro.props;
 const color = risoColorClasses[post.color];
-const mainImage = urlForImage(post.illustration.image)
-  .width(640)
-  .fit("max")
-  .url();
+
 const features = post.features;
 const date = post.date.slice(0, 10);
 ---
 
-<MainLayout>
-  <article class="container sm mt-6 mx-auto px-16 gallery">
+<MainLayout title={post.title}>
+  <article class="gallery">
     <span class="text-xs">{}</span>
-    <header class="grid grid-cols-1 md:grid-cols-2 gap-5">
-      <hgroup class="order-2">
-        <h1 class="text-2xl md:text-3xl font-semibold uppercase">
+    <div>
+      <div>
+        <h1>
           {post.title}
         </h1>
-        {features ? <FeatureBlock features={post.features} /> : undefined}
-        <p class="mt-auto">
+        {features && <FeatureBlock features={post.features} />}
+        <p>
           {post.description}
         </p>
-      </hgroup>
-      <a
-        class="ps-image"
-        href={mainImage}
-        data-pswp-src={mainImage}
-        data-pswp-width={640}
-        data-pswp-height={640 / post.illustration.size.aspectRatio}
-        target="_blank"
-      >
-        <img
-          class="float-right border-l-10 md:border-l-16 border-riso-red"
-          src={mainImage}
-          alt=""
-        />
-      </a>
-    </header>
-    <section class="mt-6"></section>
+      </div>
+      {post.illustration && <BlogPostImage illustration={post.illustration} />}
+    </div>
   </article>
 </MainLayout>
