--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -13,8 +13,10 @@ const hidden = Astro.url.pathname !== "/";
   >
     {settings.title}
   </h1> -->
-  <h1 class="md:text-center text-riso-red uppercase md:font-bold md:text-3xl">
+  <h1
+    class="text-riso-red text-lg font-semibold uppercase md:font-bold md:text-3xl md:text-center"
+  >
     {settings.title}
   </h1>
-  <div class="mt-6 border-b-2 border-riso-yellow"></div>
 </header>
+<div class="mt-6 border-b-2 border-riso-yellow"></div>
