put footer at bottom

--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -2,9 +2,7 @@
 const year = new Date().getFullYear();
 ---
 
-<footer class="mt-auto">
-  <p class="copywrite">
-    <span>Copyright &copy; {year} Arlin Ortiz.&nbsp;</span>
-    <span>All Rights Reserved.&nbsp;</span>
-  </p>
+<footer class="text-center text-riso-green text-xs md:text-sm mt-auto">
+  <p>Copyright &copy; {year} Arlin Ortiz.&nbsp;</p>
+  <p>All Rights Reserved.&nbsp;</p>
 </footer>
