--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -13,7 +13,9 @@ const { title } = Astro.props;
 
 <html class="" lang="en">
   <BaseHead title={title} />
-  <body class="font-display container mx-auto px-4 md:px-10">
+  <body
+    class="font-display container mx-auto flex flex-col min-h-screen px-4 md:px-10"
+  >
     <Header />
     <ContentLayout>
       <slot />
