--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -2,7 +2,7 @@
 import NavBarLink from "./NavBarLink.astro";
 ---
 
-<nav class="container mx-auto px-6 py-4 text-riso-blue">
+<nav class="container mx-auto md:px-6 md:py-4 text-riso-blue">
   <ul class="md:flex justify-center gap-6 hidden">
     <li><NavBarLink href="/">Home</NavBarLink></li>
     <li><NavBarLink href="/blog/">Blog</NavBarLink></li>
