--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -1,16 +1,20 @@
 ---
 import { getSiteSettings } from "../lib/sanity";
+import HamburgerMenu from "./HamburgerMenu.astro";
 import NavBar from "./NavBar.astro";
 
 const settings = await getSiteSettings();
 ---
 
-<header class="container mx-auto">
-  <NavBar />
-  <h1
-    class="text-riso-red text-lg font-semibold uppercase md:font-bold md:text-3xl md:text-center"
-  >
-    {settings.title}
-  </h1>
+<header class="container mx-auto pt-5">
+  <div class="flex flex-row-reverse justify-between gap-4 md:block">
+    <HamburgerMenu />
+    <NavBar />
+    <h1
+      class="text-riso-red text-lg font-semibold uppercase md:font-bold md:text-3xl md:text-center"
+    >
+      {settings.title}
+    </h1>
+  </div>
   <div class="mt-6 border-b-2 border-riso-yellow"></div>
 </header>
