--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -2,8 +2,8 @@
 import NavBarLink from "./NavBarLink.astro";
 ---
 
-<nav class="container mx-auto md:px-6 md:py-4 text-riso-blue">
-  <ul class="md:flex justify-center gap-6 hidden">
+<nav class="container mx-auto text-riso-blue hidden md:block">
+  <ul class="md:flex justify-center gap-6">
     <li><NavBarLink href="/">Home</NavBarLink></li>
     <li><NavBarLink href="/blog/">Blog</NavBarLink></li>
     <li><NavBarLink href="/gallery/">Gallery</NavBarLink></li>
